# cpp-ipfs-http-client

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog.md  Doxyfile  Doxyfile.conf  LICENSE  LICENSE.MIT  LICENSE.MIT-cpp-ipfs-api  README.md  build.sh  doxyfile.in  doxygen_mainpage.md
.github/workflows/: build_and_test.yml  codeql-analysis.yml
.travis/: ipfs_daemon_start.sh  ipfs_daemon_stop.sh
c-test/: .gitignore  CMakeLists.txt  dht.cc  hive_generate_conf.c  hive_message.c  hive_random_host.c  hive_refresh_conf.c
cmake/: doxygen.cmake
conf/: hive.conf.sample
cpp-test/: .gitignore  CMakeLists.txt  DMessage.cc  DMessage.h  block.cc  cluster.cc  cluster_address_list.cc  cluster_id.cc  cluster_peer_add.cc  cluster_peer_rm.cc  cluster_peers.cc  cluster_version.cc  config.cc  dht.cc  dstore_test.cc  dstore_test.sh  error.cc  file.cc  file_add.cc  file_get.cc  file_ls.cc  file_stat.cc  file_write.cc  generic.cc  id.cc  key_list.cc  object.cc  peer_add.cc  peers.cc  peers_rm.cc  pin.cc  swarm.cc  tang.txt  uid_info.cc  version.cc
docs/: annotated.html  classes.html  classipfs_1_1Client-members.html  classipfs_1_1Client.html  classipfs_1_1http_1_1CurlGlobal-members.html  classipfs_1_1http_1_1CurlGlobal.html  classipfs_1_1http_1_1Transport-members.html  classipfs_1_1http_1_1Transport.html  classipfs_1_1http_1_1TransportCurl-members.html  classipfs_1_1http_1_1TransportCurl.html  client_8h_source.html  dir_091f58635c4e2acf9e1682ee20459369.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_2d29d7dff7c7baf1180920f6796c23ae.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6fc15720c3161f973dd4a76203d657ee.html  dir_9fc725be01a8beaa700ba2c8e692d63d.html  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  md_ChangeLog.html  menudata.js  namespaceipfs.html  namespacemembers.html  namespacemembers_type.html  namespaces.html  pages.html  structipfs_1_1http_1_1FileUpload-members.html  structipfs_1_1http_1_1FileUpload.html  threading_example_8cc-example.html  transport-curl_8h_source.html  transport_8h_source.html  utils_8h_source.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_f.js  namespaces_0.js  (+8 more)
examples/: threading_example.cc
include/: ipfs-api.h
include/c-api/: c-api.h
include/hive/: c-api.h  cluster.h  message.h  node.h
include/hive/http/: transport-curl.h
include/hive/test/: utils.h
include/ipfs/: api.h  client.h  cluster-client.h  cluster.h  http-transport-curl.h  http-transport.h  node.h
include/ipfs/http/: transport-curl.h  transport.h
include/ipfs/test/: utils.h
samples/: CMakeLists.txt  DMessage.cc  DMessage.h  deploy_message_service.cc  message.cc  read_message.cc  send_message.cc
scripts/: check_format.sh  fix_format.sh  ipfs_daemon_start.sh  ipfs_daemon_stop.sh
src/: api.cc  client.cc  cluster.cc  http-transport-curl.cc  http-transport.cc  ipfs-api.cc  message.cc  node.cc
src/c-api/: c-api.cc  dstorec.cc
src/http/: transport-curl.cc
test/: CMakeLists.txt  block.cc  config.cc  dag.cc  dht.cc  error.cc  files.cc  generic.cc  key.cc  name.cc  object.cc  pin.cc  simple.cc  swarm.cc  test_block.cc  test_config.cc  test_dht.cc  test_error.cc  test_files.cc  test_generic.cc  test_key.cc  test_name.cc  test_object.cc  test_pin.cc  test_stats.cc  test_swarm.cc  test_threading.cc  test_transport_curl.cc  utils.h
